--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 ###################################################################################
 project(coroutine)
 SET(CMAKE_CXX_COMPILER "g++")
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -fPIC")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 ${CMAKE_CXX_FLAGS}")
-set(CMAKE_CXX_FLAGS_DEBUG "-g ${CMAKE_CXX_FLAGS}")
+set(CXX_FLAGS "-std=c++11 -Wall -Werror -fPIC")
+set(CMAKE_CXX_FLAGS "-g ${CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 ${CXX_FLAGS}")
 
 aux_source_directory(${PROJECT_SOURCE_DIR}/coroutine CO_SRC_LIST)
 aux_source_directory(${PROJECT_SOURCE_DIR}/coroutine/linux CO_SRC_LIST)
