增加libcoroutine_main.a 让用户不必手写调度器执行函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ install(DIRECTORY ${PROJECT_SOURCE_DIR}/coroutine/ DESTINATION "include/coroutin
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/coroutine/linux/ DESTINATION "include/coroutine" FILES_MATCHING PATTERN "*.h")
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/network")
+add_subdirectory("${PROJECT_SOURCE_DIR}/coroutine/main")
